Add add-opens to test runs.